fixing bio spacing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -451,7 +451,7 @@ a {
 .only-tool {
 	font-family: inconsolata;
 	color: #066;
-	font-size: 1.1em;
+	font-size: 1.3em;
 	text-transform: uppercase;
 }
 
